--- a/client/src/App.css
+++ b/client/src/App.css
@@ -247,6 +247,7 @@ img {
 
 .form input[type="text"],
 .form input[type="email"],
+.form input[type="number"],
 .form input[type="password"],
 .form input[type="date"],
 .form select,
